--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
           #wrapper { height: 100%; }
           #wrapper,
           .contacts { display: flex; align-items: center; justify-content: center; }
-          .content {
-            padding: 0 5%;
-          }
+          .content { padding: 0 5%; }
           .center { margin: 0 auto; text-align: center; }
           .text { font-family: 'Abhaya Libre', serif; font-size: 1rem; width: 80%; }
           .contacts { list-style-type: none; margin: 2% 0; padding: 0; }
