--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     body { background: #eee; color: #333; }
     #wrapper { height: 100%; }
     #wrapper,.contacts { display: flex; align-items: center; justify-content: center; }
-    h1 { font-family: "Mechanical"; font-weight: 100; }
+    h1 { font-family: "Mechanical"; font-weight: 100; font-size: 2.5em; }
     .content { padding: 0 5%; }
     .center { margin: 0 auto; text-align: center; }
     .text { font-family: 'Helvetica', serif; font-size: 1rem; width: 80%; }
@@ -36,7 +36,7 @@
       <h1 class="center">Diego Costantino</h1>
       <div class="text center">
         <p>
-          Hi, I'm Diego Costantino, a software engineer.
+          I'm a software engineer based in Vancouver, BC (Canada).
         </p>
       </div>
       <ul class="contacts">
